-----

 - [QTBUG-29130] Fixed compilation when connecting with the new syntax to a
   signal that has more than 3 registered meta type arguments, and the compiler
   does not support variadic templates

QtGui
-----

QtWidgets
---------

QtNetwork
---------

QtDBus
------

QtConcurrent
------------

QtOpenGL
--------

QtTest
------

QtSql
-----

****************************************************************************
*                          Database Drivers                                *
****************************************************************************

sqlite
------

postgres
--------

****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------

Qt for Windows
--------------

Qt for Mac OS X
---------------

Qt for BlackBerry
-----------------

Qt for Embedded Linux
---------------------

Qt for Windows CE
-----------------


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Tools                                           *
****************************************************************************


****************************************************************************
*                          Plugins                                         *
****************************************************************************


****************************************************************************
*                   Important Behavior Changes                             *
****************************************************************************
