@@ -2364,11 +2364,11 @@ name|tokPtr
 argument_list|)
 decl_stmt|;
 specifier|const
-name|ProStringList
+name|ProString
 modifier|&
 name|val
 init|=
-name|split_value_list
+name|ProString
 argument_list|(
 name|m_option
 operator|->
@@ -2394,17 +2394,15 @@ argument_list|(
 name|var
 argument_list|)
 argument_list|,
-name|dbgStrList
+name|dbgStr
 argument_list|(
 name|val
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|addStrList
+name|addStr
 argument_list|(
 name|val
-argument_list|,
-name|tok
 argument_list|,
 name|ret
 argument_list|,
