@@ -107,6 +107,12 @@ Qt for Windows CE
 *                          Tools                                           *
 ****************************************************************************
 
+qmake
+-----
+
+ - $$(VAR) style environment variable expansions will not split on
+   whitespace any more. Use $$split() if necessary.
+
 
 ****************************************************************************
 *                          Plugins                                         *
